--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,9 @@
 .rigth h2{
     color: rgb(46, 46, 162);
 }
+.aboutmep{
+    font-size:2vm;
+}
 /* -------------------------port-------------------- */
 .pinfo{
     padding-top: 50px;
