--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 .divnav {
-    background-color: #ffffff;
+    background-color: #ffffff ;
     position: absolute;
     display: flex;
     justify-content: space-around;
@@ -13,7 +13,6 @@
     width: 100%;
     padding-top: 10px;
     padding-bottom: 10px;
-   
 
 }
 
@@ -36,7 +35,11 @@
 }
 
 
-
+.menu{
+    background-color: #000000;
+    height: 20px;
+    width: 20px;
+}
 
 .li,
 .a {
@@ -175,9 +178,6 @@
 
 .rigth h2{
     color: rgb(46, 46, 162);
-}
-.aboutmep{
-    font-size:2vm;
 }
 /* -------------------------port-------------------- */
 .pinfo{
